Bug 114771 - Focus rectangle misplaced in Navigator content navigation view after promote or demote or dnd
Summary: Focus rectangle misplaced in Navigator content navigation view after promote...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
6.1.0.0.alpha0+
Hardware: All All
: low trivial
Assignee: Not Assigned
URL:
Whiteboard: target:6.1.0
Keywords:
Depends on:
Blocks: Navigator
  Show dependency treegraph
 
Reported: 2017-12-30 19:04 UTC by Jim Raykowski
Modified: 2018-01-27 17:10 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
navigator content navigation view test file (9.65 KB, application/vnd.oasis.opendocument.text)
2017-12-30 19:04 UTC, Jim Raykowski
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Jim Raykowski 2017-12-30 19:04:29 UTC
Created attachment 138754 [details]
navigator content navigation view test file

When Navigator is in the Headings content navigation view and any of the promote or demote buttons are use or a drag and drop is done the focus rectangle ends up at the Headings root when it should remain at the heading that was promoted or demoted or dragged and dropped.

1. open attached test document
2. open Navigator in the sidebar
3. click on Content Navigation View button (first button on second line just below the Navigation drop down button)
4. click on HEADING 1 in the Navigator content navigation view list
5. click on any of the promote or demote buttons

result: 
focus box is set around Headings

expected result:
focus box remains on HEADING 1

The same result occurs when a drag and drop is done.

On confirmation of this bug I will submit a patch.
Comment 1 Buovjaga 2018-01-26 17:02:03 UTC
Reproduced with the file.
Thank you for all the work you do on Navigator and other things!

Arch Linux 64-bit
Version: 6.1.0.0.alpha0+
Build ID: 19f8a979ff86be39a3938b3d7b25c1431191e708
CPU threads: 8; OS: Linux 4.14; UI render: default; VCL: kde4; 
Locale: fi-FI (fi_FI.UTF-8); Calc: group threaded
Built on January 25th 2018
Comment 2 Jim Raykowski 2018-01-27 05:15:07 UTC
Thank you for confirming this and also for all the work you do on LibreOffice.

Here is a link to the patch:
https://gerrit.libreoffice.org/#/c/48738/
Comment 3 Commit Notification 2018-01-27 13:23:10 UTC
Jim Raykowski committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=2d8f17565ebe867210f5769851d91b2e7b612a8f

tdf#114771 make focus rect in Navigator content tree position correctly

It will be available in 6.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Buovjaga 2018-01-27 17:10:15 UTC
Verified as fixed

Arch Linux 64-bit
Version: 6.1.0.0.alpha0+
Build ID: 2d8f17565ebe867210f5769851d91b2e7b612a8f
CPU threads: 8; OS: Linux 4.14; UI render: default; VCL: kde4; 
Locale: fi-FI (fi_FI.UTF-8); Calc: group threaded
Built on January 27th 2018