tdf#114771 make focus rect in Navigator content tree position correctly

Change-Id: I747d3ef2bbe7227b048e29bd8c5758fb7778ab9d